# MLBeerRegression

./: README.md  pyproject.toml
Data/processed/: X_test_1.csv  X_test_2.csv  X_train_1.csv  X_train_2.csv  y_test_1.csv  y_train_1.csv
Notebooks/: 01.ipynb  01_Analise_exploratoria.ipynb  02_Modelagem.ipynb  03_Analise_resultados.ipynb
models/: linear_regression_1.pkl  linear_regression_2.pkl
