[project]
name = "mlbeerregression"
version = "0.1.0"
description = ""
authors = [
    {name = "Espedito Ferreira Alves",email = "espeditoalves123@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "notebook (>=7.4.2,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[tool.poetry]
packages = [{include = "mlbeerregression", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
